--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /storage/*
 !/storage/.keep
 
+/client/node_modules
+
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
