--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,17 @@
     "aphrodite": "^2.4.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
-    "dotenv": "^8.1.0",
-    "lodash": "^4.17.15",
-    "md5": "^2.2.1",
+    "is-empty": "^1.2.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.6",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
