--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "articles",
-  "license": "MIT",
+  "name": "react-and-rails",
   "engines": {
-    "node": "12.9.0",
-    "yarn": "1.17.3"
+    "node": "12.9.0"
   },
   "scripts": {
-    "build": "yarn --cwd client install && yarn --cwd client build",
+    "build": "cd client && npm install && npm run build && cd ..",
     "deploy": "cp -a client/build/. public/",
-    "heroku-postbuild": "yarn build && yarn deploy"
+    "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
   }
 }
